--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "serve": "webpack",
-    "build": ""
+    "serve": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -32,13 +32,18 @@
   },
   "homepage": "https://github.com/lokeswara-s/vue-boilerplate#readme",
   "dependencies": {
-    "vue": "^2.5.17"
+    "install": "^0.12.1",
+    "npm": "^6.4.1",
+    "vue": "^2.5.17",
+    "vue-i18n": "^8.1.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "node-sass": "^4.9.3",
     "on-build-webpack": "^0.1.0",
     "sass-loader": "^7.1.0",
     "url-loader": "^1.1.1",
@@ -47,6 +52,7 @@
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
