--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/lokeswara-s/vue-boilerplate#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "install": "^0.12.1",
     "npm": "^6.4.1",
     "vue": "^2.5.17",
