--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "",
-    "serve": "webpack-dev-server",
+    "start:development": "webpack-dev-server --mode development",
     "build": "webpack"
   },
   "repository": {
@@ -37,14 +37,17 @@
     "npm": "^6.4.1",
     "vue": "^2.5.17",
     "vue-i18n": "^8.1.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
+    "eslint": "^5.9.0",
+    "eslint-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.10.0",
     "on-build-webpack": "^0.1.0",
     "sass-loader": "^7.1.0",
     "url-loader": "^1.1.1",
@@ -54,6 +57,7 @@
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.1.8",
+    "webpackbar": "^3.1.2"
   }
 }
