--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
+    "webpack-jarvis": "^0.3.2",
     "webpackbar": "^3.1.2"
   }
 }
