--- a/package.json
+++ b/package.json
@@ -33,31 +33,35 @@
   "homepage": "https://github.com/lokeswara-s/vue-boilerplate#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "install": "^0.12.1",
-    "npm": "^6.4.1",
-    "vue": "^2.5.17",
-    "vue-i18n": "^8.1.0",
-    "vue-router": "^3.0.1",
+    "install": "^0.12.2",
+    "npm": "^6.9.0",
+    "vue": "^2.6.10",
+    "vue-i18n": "^8.9.0",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "css-loader": "^1.0.0",
-    "dotenv": "^6.0.0",
-    "eslint": "^5.9.0",
-    "eslint-loader": "^2.1.1",
+    "babel-eslint": "^10.0.1",
+    "css-loader": "^1.0.1",
+    "dotenv": "^6.2.0",
+    "eslint": "^5.15.3",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-vue": "^5.2.2",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "on-build-webpack": "^0.1.0",
     "sass-loader": "^7.1.0",
-    "url-loader": "^1.1.1",
+    "stylelint": "^9.10.1",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "url-loader": "^1.1.2",
     "vue-cli": "^2.9.6",
-    "vue-loader": "^15.4.2",
+    "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
     "webpack-jarvis": "^0.3.2",
     "webpackbar": "^3.1.2"
   }
